[gd_scene load_steps=3 format=3]

[ext_resource type="Script" path="res://scenes/character_hub/character_hub.gd" id="1_script"]
[ext_resource type="PackedScene" path="res://scenes/inventory/ui/character_tabs.tscn" id="2_tabs"]

[node name="CharacterHub" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="BG" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.12, 0.18, 1)

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 10.0
offset_right = -20.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 6

[node name="TopBar" type="HBoxContainer" parent="VBox"]
layout_mode = 2

[node name="BackButton" type="Button" parent="VBox/TopBar"]
layout_mode = 2
text = "< Back"

[node name="Title" type="Label" parent="VBox/TopBar"]
layout_mode = 2
size_flags_horizontal = 3
text = "Character"
horizontal_alignment = 1
theme_override_font_sizes/font_size = 22

[node name="GoldLabel" type="Label" parent="VBox/TopBar"]
layout_mode = 2
text = "Gold: 0"

[node name="CharacterTabs" parent="VBox" instance=ExtResource("2_tabs")]
layout_mode = 2

[node name="ViewTabs" type="HBoxContainer" parent="VBox"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="StatsTab" type="Button" parent="VBox/ViewTabs"]
layout_mode = 2
size_flags_horizontal = 3
toggle_mode = true
button_pressed = true
text = "Stats"

[node name="SkillsTab" type="Button" parent="VBox/ViewTabs"]
layout_mode = 2
size_flags_horizontal = 3
toggle_mode = true
text = "Skills"

[node name="ViewContainer" type="Control" parent="VBox"]
layout_mode = 2
size_flags_vertical = 3
